--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,7 @@
     "accoutrement-scale": "~1.0.4",
     "accoutrement-fonts": "~1.0.0",
     "accoutrement-maps": "~1.0.0",
-    "accoutrement-strings": "~1.0.0"
+    "accoutrement-strings": "~1.0.0",
+    "accoutrement-queries": "~1.0.0"
   }
 }
