--- a/content/config.yml
+++ b/content/config.yml
@@ -7,13 +7,14 @@ blurbs:
     body: "A really, really good reading time! Eric has gathered all of the beauteous, ugly, and necessary parts together in one place. Graciously, he leaves us the pleasure of assembly without rules."
 
   - cite: 'Chris Eppstein'
-    org: 'Sass Core Developer'
+    org: 'Sass & Compass'
     org_url: 'http://sass-lang.com/'
     body: "Rarely do you get to experience intimate thoughts like these. It's like being dropped into someone's head, Quantum Leap style, for a transformative time in their life. I won't deny, it definitely turned me on."
 
 
 # defaults
 author: eric
+location: home
 copyright: 2015
 
 
