--- a/package.json
+++ b/package.json
@@ -5,11 +5,17 @@
   "main": "index.html",
   "dependencies": {},
   "devDependencies": {
-    "gulp": "^3.8.10",
-    "gulp-autoprefixer": "^2.1.0",
-    "gulp-sass": "^1.3.2",
+    "gulp": "3.8.11",
+    "gulp-autoprefixer": "2.1.0",
+    "gulp-chmod": "1.2.0",
+    "gulp-jshint": "1.9.2",
+    "gulp-nunjucks": "1.0.3",
+    "gulp-rename": "1.2.0",
+    "gulp-sass": "1.3.2",
     "gulp-scsslint": "0.0.5",
-    "gulp-sourcemaps": "^1.3.0"
+    "gulp-sourcemaps": "1.3.0",
+    "gulp-svg-symbols": "0.3.1",
+    "gulp-util": "3.0.3"
   },
   "scripts": {},
   "repository": {
