--- a/content/config.yml
+++ b/content/config.yml
@@ -13,9 +13,13 @@ blurbs:
 
 
 # defaults
+title: Riding SideSaddle*
 author: eric
+author_full: Eric M Suzanne
 location: home
 copyright: 2015
+description: An open-source novel on note cards — created by Eric M Suzanne, and published by SpringGun Press.
+keywords: novel, elit, experimental, art, collage, open-source, creative commons, oddbook
 
 
 # Site Config
