--- a/content/config.yml
+++ b/content/config.yml
@@ -4,12 +4,12 @@ blurbs:
   - cite: 'Erin Rollman & Brian Colona'
     org: 'Buntport Theatre'
     org_url: 'http://buntport.com/'
-    body: "A really, really good reading time! Eric has gathered all of the beauteous, ugly, and necessary parts together in one place. Graciously, he leaves us the pleasure of assembly without rules."
+    body: "A really, really good reading time! Eric has gathered all the beauteous, ugly, and necessary parts together in one place. Graciously, he leaves us the pleasure of assembly without&nbsp;rules."
 
   - cite: 'Chris Eppstein'
     org: 'Sass & Compass'
     org_url: 'http://sass-lang.com/'
-    body: "Rarely do you get to experience intimate thoughts like these. It's like being dropped into someone's head, Quantum Leap style, for a transformative time in their life. I won't deny, it definitely turned me on."
+    body: "Rarely do you get to experience such intimate thoughts. It's like being dropped into someone's head, Quantum Leap style, for a transformative time in their life. Super sexy. I won't deny, it turned me&nbsp;on."
 
 
 # defaults
