--- a/content/config.yml
+++ b/content/config.yml
@@ -1,7 +1,7 @@
 ---
 # blurbs
 blurbs:
-  - cite: 'Erin Rollman & Brian Colona'
+  - cite: 'Erin Rollman & Brian Colonna'
     org: 'Buntport Theatre'
     org_url: 'http://buntport.com/'
     body: "A really, really good reading time! Eric has gathered all the beauteous, ugly, and necessary parts together in one place. Graciously, he leaves us the pleasure of assembly without&nbsp;rules."
