--- a/content/config.yml
+++ b/content/config.yml
@@ -4,12 +4,17 @@ blurbs:
   - cite: 'Erin Rollman & Brian Colonna'
     org: 'Buntport Theatre'
     org_url: 'http://buntport.com/'
-    body: "A really, really good reading time! Eric has gathered all the beauteous, ugly, and necessary parts together in one place. Graciously, he leaves us the pleasure of assembly without&nbsp;rules."
+    body: "A really, really good reading time! Eric has gathered all of the beauteous, ugly, and necessary parts together in one place. The characters, ideas, story are exposed, raw, alive — merging masculine and feminine into some kind of mystical marriage. Graciously, Eric leaves us the pleasure of assembly without rules."
 
   - cite: 'Chris Eppstein'
-    org: 'Sass & Compass'
-    org_url: 'http://sass-lang.com/'
+    org: 'Core Developer of Compass & Sass'
+    org_url: 'http://compass-style.org'
     body: "Rarely do you get to experience such intimate thoughts. It's like being dropped into someone's head, Quantum Leap style, for a transformative time in their life. Super sexy. I won't deny, it turned me&nbsp;on."
+
+  - cite: 'Natalie Weizenbaum'
+    org: 'Lead Designer/Developer of Sass'
+    org_url: 'http://sass-lang.com'
+    body: "This feels more realistic than any other novel could hope to be: every moment is just one in a sea of other moments, no more or less important, although no less interesting for that. The result is an impressionist array of feelings and emotions and understandings of oneself and others."
 
 
 # defaults
@@ -18,7 +23,7 @@ author: eric
 author_full: Eric M Suzanne
 location: home
 copyright: 2015
-description: An open-source novel on note cards — created by Eric M Suzanne, and published by SpringGun Press.
+description: An open-source novel on notecards — created by Eric M Suzanne, and published by SpringGun Press.
 keywords: novel, elit, experimental, art, collage, open-source, creative commons, oddbook
 
 
