--- a/content/config.yml
+++ b/content/config.yml
@@ -24,7 +24,7 @@ author_full: Eric M Suzanne
 location: home
 copyright: 2015
 description: An open-source novel on notecards — created by Eric M Suzanne, and published by SpringGun Press.
-longdesc: "Riding SideSaddle* is an open-source novel on notecards — a fragmented memory of our time together, and these bodies we inhabit — created by Eric Suzanne, with contributions from Jacob Liechty, Sondra Eby, Aaron Liechty, and others — published by SpringGun Press."
+longdesc: "Riding SideSaddle* is an open-source novel on notecards - a fragmented memory of our time together, and these bodies we inhabit - created by Eric Suzanne, with contributions from Jacob Liechty and others. Published by SpringGun Press."
 keywords: novel, elit, experimental, art, collage, open-source, creative commons, oddbook
 
 
