--- a/content/config.yml
+++ b/content/config.yml
@@ -1,6 +1,11 @@
 ---
 # blurbs
 blurbs:
+  - cite: 'Tim Wenger'
+    org: 'Colorado Music Buzz'
+    org_url: 'http://www.colomusicbuzz.com/eric-suzanne-drops-non-linear-novel-in-conjunction-with-teacup-gorilla/'
+    body: 'One of the most ambitious projects that has come across our desk recently.'
+
   - cite: 'Erin Rollman & Brian Colonna'
     org: 'Buntport Theatre'
     org_url: 'http://buntport.com/'
