--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "homepage": "https://github.com/ericam/ridingsidesaddle.net",
   "authors": [
-    "Eric M Suzanne <eric@oddbird.net>"
+    "Eric Miriam Suzanne <eric@oddbird.net>"
   ],
   "description": "an open-source novel",
   "main": "index.html",
