--- a/package.json
+++ b/package.json
@@ -3,11 +3,17 @@
   "version": "1.0.0",
   "description": "an open-source novel",
   "main": "index.html",
-  "dependencies": {},
-  "devDependencies": {
+  "dependencies": {
+    "accoutrement-color": "^2.0.0-rc.3",
+    "accoutrement-fonts": "^2.0.0-rc.1",
+    "accoutrement-init": "^1.0.0-rc.5",
+    "accoutrement-layout": "^2.0.0-rc.1",
+    "accoutrement-pseudo": "^1.0.2",
+    "accoutrement-queries": "^1.1.0",
+    "accoutrement-scale": "^1.1.1",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "2.1.0",
-    "gulp-sass": "^2.0.4",
+    "gulp-sass": "^2.1.1",
     "gulp-scsslint": "0.0.5",
     "gulp-sourcemaps": "1.3.0",
     "gulp-util": "3.0.3"
@@ -15,7 +21,7 @@
   "scripts": {},
   "repository": {
     "type": "git",
-    "url": "https://github.com/ericam/ridingsidesaddle.net.git"
+    "url": "https://github.com/mirisuzanne/ridingsidesaddle.net.git"
   },
   "ignore": [
     "**/.*",
@@ -33,10 +39,10 @@
     "hermaphroditus",
     "myth"
   ],
-  "author": "Eric M. Suzanne",
+  "author": "Miriam Eric Suzanne",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ericam/ridingsidesaddle.net/issues"
+    "url": "https://github.com/mirisuzanne/ridingsidesaddle.net/issues"
   },
-  "homepage": "https://github.com/ericam/ridingsidesaddle.net"
+  "homepage": "https://ridingsidesaddle.com"
 }
