--- a/content/config.yml
+++ b/content/config.yml
@@ -14,7 +14,7 @@ blurbs:
   - cite: 'Erin Rollman & Brian Colonna'
     org: 'Buntport Theatre'
     org_url: 'http://buntport.com/'
-    body: "A really, really good reading time! Eric has gathered all of the beauteous, ugly, and necessary parts together in one place. The characters, ideas, story are exposed, raw, alive — merging masculine and feminine into some kind of mystical marriage. Graciously, Eric leaves us the pleasure of assembly without rules."
+    body: "A really, really good reading time! Miriam has gathered all of the beauteous, ugly, and necessary parts together in one place. The characters, ideas, story are exposed, raw, alive — merging masculine and feminine into some kind of mystical marriage. Graciously, Miriam leaves us the pleasure of assembly without rules."
 
   - cite: 'Chris Eppstein'
     org: 'Core Developer of Compass & Sass'
@@ -50,10 +50,10 @@ title: 'Riding SideSaddle*'
 author: 'Miriam'
 author_full: '(Eric) Miriam Suzanne'
 location: home
-copyright: 2016
-description: An open-source novel on notecards — created by (Eric) Miriam Suzanne, and published by SpringGun Press.
+copyright: '2015-2016'
+description: 'An open-source novel on notecards — created by (Eric) Miriam Suzanne, and published by SpringGun Press.'
 longdesc: "Riding SideSaddle* is an open-source novel on notecards - a fragmented memory of our time together, and these bodies we inhabit - created by (Eric) Miriam Suzanne, with contributions from Jacob Liechty and others. Published by SpringGun Press."
-keywords: novel, elit, experimental, art, collage, open-source, creative commons, oddbook
+keywords: 'novel, elit, experimental, art, collage, open-source, creative commons, oddbook'
 fb_image: 'box.jpg'
 
 
