--- a/content/config.yml
+++ b/content/config.yml
@@ -48,10 +48,10 @@ bookstores:
 # defaults
 title: 'Riding SideSaddle*'
 author: 'Miriam'
-author_full: '(Eric) Miriam Suzanne'
+author_full: 'Miriam Eric Suzanne'
 location: home
 copyright: '2015-2016'
-description: 'An open-source novel on notecards — created by (Eric) Miriam Suzanne, and published by SpringGun Press.'
+description: 'An open-source novel on notecards — created by Miriam Eric Suzanne, and published by SpringGun Press.'
 longdesc: "Riding SideSaddle* is an open-source novel on notecards - a fragmented memory of our time together, and these bodies we inhabit - created by (Eric) Miriam Suzanne, with contributions from Jacob Liechty and others. Published by SpringGun Press."
 keywords: 'novel, elit, experimental, art, collage, open-source, creative commons, oddbook'
 fb_image: 'box.jpg'
