--- a/package.json
+++ b/package.json
@@ -4,19 +4,18 @@
   "description": "an open-source novel",
   "main": "index.html",
   "dependencies": {
-    "accoutrement-color": "^2.0.0-rc.3",
-    "accoutrement-fonts": "^2.0.0-rc.1",
-    "accoutrement-init": "^1.0.0-rc.5",
-    "accoutrement-layout": "^2.0.0-rc.1",
-    "accoutrement-pseudo": "^1.0.2",
-    "accoutrement-queries": "^1.1.0",
-    "accoutrement-scale": "^1.1.1",
+    "accoutrement-color": "^2.0.1",
+    "accoutrement-init": "^1.1.0",
+    "accoutrement-layout": "^2.1.0",
+    "accoutrement-scale": "^2.0.0",
+    "accoutrement-type": "^2.1.0",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "2.1.0",
     "gulp-sass": "^2.1.1",
     "gulp-scsslint": "0.0.5",
     "gulp-sourcemaps": "1.3.0",
-    "gulp-util": "3.0.3"
+    "gulp-util": "3.0.3",
+    "mathsass": "^0.9.5"
   },
   "scripts": {},
   "repository": {
